--- a/Medical_Cost_Personal_Datasets.ipynb
+++ b/Medical_Cost_Personal_Datasets.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Medical-Cost-Personal-Datasets.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMTt4Q6P3l8Brydwa6hxHm8",
+      "authorship_tag": "ABX9TyPYmpEDFzMJJD1Xfmf/meRM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -596,7 +596,7 @@
       "cell_type": "code",
       "source": [
         "from sklearn.preprocessing import OneHotEncoder\n",
-        "from sklearn.linear_model import LinearRegression\n",
+        "#from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_absolute_error\n",
         "from sklearn.neural_network import MLPRegressor\n",
         "import xgboost as xg\n",
@@ -651,6 +651,8 @@
         "\n",
         "\n",
         "scaler = RobustScaler()\n",
+        "X_train.columns = [str(i) for i in X_train.columns]\n",
+        "X_test.columns = [str(i) for i in X_test.columns]\n",
         "X_train = scaler.fit_transform(X_train)\n",
         "X_test = scaler.transform(X_test)\n",
         "    \n",
@@ -660,10 +662,10 @@
         "\n",
         "#LinearRegression= MLPRegressor(hidden_layer_sizes=(15,15,5))\n",
         "\n",
-        "LinearRegression= xg.XGBRegressor()\n",
-        "LinearRegression.fit(X_train,y_train)\n",
+        "model= xg.XGBRegressor(silent=True)\n",
+        "model.fit(X_train,y_train)\n",
         "\n",
-        "y_pred=LinearRegression.predict(X_test)\n",
+        "y_pred=model.predict(X_test)\n",
         "\n",
         "print(mean_absolute_error(y_test, y_pred))\n",
         "\n",
@@ -676,31 +678,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XZF77xkk1scl",
-        "outputId": "7a2561be-448c-4e20-d74d-a343d391e0c2"
+        "outputId": "f3526fc1-1b4b-474d-bbb0-4387ccc11a80"
       },
-      "execution_count": 18,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "X_train.shape (1070, 6)\n",
-            "X_train.shape (1464, 6)\n",
+            "X_train.shape (1457, 6)\n",
             "--\n",
-            "[14:21:42] WARNING: /workspace/src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n",
-            "3044.5172267509615\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/utils/validation.py:1692: FutureWarning: Feature names only support names that are all strings. Got feature names with dtypes: ['int', 'str']. An error will be raised in 1.2.\n",
-            "  FutureWarning,\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/utils/validation.py:1692: FutureWarning: Feature names only support names that are all strings. Got feature names with dtypes: ['int', 'str']. An error will be raised in 1.2.\n",
-            "  FutureWarning,\n",
-            "/usr/local/lib/python3.7/dist-packages/sklearn/utils/validation.py:1692: FutureWarning: Feature names only support names that are all strings. Got feature names with dtypes: ['int', 'str']. An error will be raised in 1.2.\n",
-            "  FutureWarning,\n"
+            "2743.93566539456\n"
           ]
         }
       ]
